ci: modified to rxjsang

--- a/src/RxJSDemo/RxJSDemoWebAPI/wwwroot/index.html
+++ b/src/RxJSDemo/RxJSDemoWebAPI/wwwroot/index.html
@@ -8,7 +8,7 @@
 <body>
     This is the RxJS demo
     <ul>
-        <li><a href="rxjs/index.html">Demo</a></li>
+        <li><a href="rxjsAng/index.html">Demo</a></li>
     </ul>
 
 </body>
